# ImguiBluePrint

./: .gitignore  crude_json.cpp  crude_json.h  imgui_bezier_math.inl  imgui_canvas.h  imgui_node_editor_internal.inl
docs/: README.md  TODO.md
examples/: CMakeLists.txt
examples/application/: CMakeLists.txt
examples/application/include/: application.h
examples/application/source/: application.cpp  entry_point.cpp  imgui_extra_keys.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_win32.cpp  imgui_impl_win32.h  platform.h  platform_win32.cpp  renderer.h  renderer_dx11.cpp  setup.h
examples/basic-interaction-example/: CMakeLists.txt  basic-interaction-example.cpp
examples/blueprints-example/: CMakeLists.txt  blueprints-example.cpp
examples/blueprints-example/src/cpp/: Base_Node.cpp
examples/blueprints-example/src/inc/: Base_Node.h
examples/blueprints-example/utilities/: builders.cpp  builders.h  drawing.cpp  drawing.h  widgets.cpp  widgets.h
examples/canvas-example/: CMakeLists.txt  canvas-example.cpp
examples/simple-example/: CMakeLists.txt  simple-example.cpp
examples/widgets-example/: CMakeLists.txt  widgets-example.cpp
misc/: crude_json.natvis  imgui_node_editor.natvis
misc/cmake-modules/: FindScopeGuard.cmake  Findgl3w.cmake  Findimgui.cmake  Findimgui_node_editor.cmake  Findstb_image.cmake
